z-index fixed

--- a/src/component/Cell/style.css
+++ b/src/component/Cell/style.css
@@ -13,6 +13,7 @@
     align-items: center;
     display: flex;
     position: relative;
+    border-radius: 7px;
     /* box-shadow: 0em 0.5em 0.5em -0.5em #c4c4c4; */
     filter: drop-shadow(0px -2px 10px #3c424b);
 
