--- a/src/component/Navbar/style.css
+++ b/src/component/Navbar/style.css
@@ -3,6 +3,7 @@
     position: fixed;
     border-radius: 0px 10px 10px 0px;
     width:100px;
+    z-index: 1;
 }
 
 .navbar_container{
